@@ -1,7 +1,12 @@
 # This file is part of Tryton.  The COPYRIGHT file at the top level of
 # this repository contains the full copyright notices and license terms.
 from itertools import chain
-from trytond.model import ModelView, ModelSQL, DeactivableMixin, fields, Unique
+
+from sql import With
+
+from trytond.model import ModelView, ModelSQL, DeactivableMixin, tree, fields
+from trytond.model import Unique
+from trytond.pool import Pool
 from trytond.tools import grouped_slice
 
 
@@ -23,11 +28,14 @@ class MenuMany2Many(fields.Many2Many):
         return res
 
 
-class Group(DeactivableMixin, ModelSQL, ModelView):
+class Group(DeactivableMixin, tree(), ModelSQL, ModelView):
     "Group"
     __name__ = "res.group"
     name = fields.Char('Name', required=True, select=True, translate=True)
     users = fields.Many2Many('res.user-res.group', 'group', 'user', 'Users')
+    parent = fields.Many2One(
+        'res.group', "Parent",
+        help="The group to inherit accesses from.")
     model_access = fields.One2Many('ir.model.access', 'group',
        'Access Model')
     field_access = fields.One2Many('ir.model.field.access', 'group',
@@ -51,6 +59,19 @@ class Group(DeactivableMixin, ModelSQL, ModelView):
         cls._order.insert(0, ('name', 'ASC'))
 
     @classmethod
+    def write(cls, *args):
+        super().write(*args)
+        pool = Pool()
+        # Restart the cache on the domain_get method
+        pool.get('ir.rule')._domain_get_cache.clear()
+        # Restart the cache for get_groups
+        pool.get('res.user')._get_groups_cache.clear()
+        # Restart the cache for model access and view
+        pool.get('ir.model.access')._get_access_cache.clear()
+        pool.get('ir.model.field.access')._get_access_cache.clear()
+        ModelView._fields_view_get_cache.clear()
+
+    @classmethod
     def copy(cls, groups, default=None):
         if default is None:
             default = {}
@@ -67,3 +88,14 @@ class Group(DeactivableMixin, ModelSQL, ModelView):
             default['name'] = name
             new_groups.extend(super(Group, cls).copy([group], default=default))
         return new_groups
+
+    @classmethod
+    def group_parent_all_cte(cls):
+        group = cls.__table__()
+        parents = With('id', 'parent', recursive=True)
+        parents.query = group.select(group.id, group.parent)
+        parents.query |= group.select(group.id, group.id)
+        parents.query |= (group
+            .join(parents, condition=group.parent == parents.id)
+            .select(group.id, parents.parent))
+        return parents
