@@ -445,7 +445,7 @@ this repository contains the full copyright notices and license terms. -->
         </record>
         <record model="ir.rule" id="rule_menu1">
             <field name="domain"
-                eval="[('groups', 'in', Eval('user', {}).get('groups', []))]"
+                eval="[('groups', 'in', Eval('groups', []))]"
                 pyson="1"/>
             <field name="rule_group" ref="rule_group_menu"/>
         </record>
@@ -460,7 +460,7 @@ this repository contains the full copyright notices and license terms. -->
         </record>
         <record model="ir.rule" id="rule_action1">
             <field name="domain"
-                eval="[('groups', 'in', Eval('user', {}).get('groups', []))]"
+                eval="[('groups', 'in', Eval('groups', []))]"
                 pyson="1"/>
             <field name="rule_group" ref="rule_group_action"/>
         </record>
@@ -475,7 +475,7 @@ this repository contains the full copyright notices and license terms. -->
         </record>
         <record model="ir.rule" id="rule_action_keyword1">
             <field name="domain"
-                eval="[('groups', 'in', Eval('user', {}).get('groups', []))]"
+                eval="[('groups', 'in', Eval('groups', []))]"
                 pyson="1"/>
             <field name="rule_group" ref="rule_group_action_keyword"/>
         </record>
@@ -491,7 +491,7 @@ this repository contains the full copyright notices and license terms. -->
         </record>
         <record model="ir.rule" id="rule_action_report1">
             <field name="domain"
-                eval="[('groups', 'in', Eval('user', {}).get('groups', []))]"
+                eval="[('groups', 'in', Eval('groups', []))]"
                 pyson="1"/>
             <field name="rule_group" ref="rule_group_action_report"/>
         </record>
@@ -507,7 +507,7 @@ this repository contains the full copyright notices and license terms. -->
         </record>
         <record model="ir.rule" id="rule_action_act_window1">
             <field name="domain"
-                eval="[('groups', 'in', Eval('user', {}).get('groups', []))]"
+                eval="[('groups', 'in', Eval('groups', []))]"
                 pyson="1"/>
             <field name="rule_group" ref="rule_group_action_act_window"/>
         </record>
@@ -523,7 +523,7 @@ this repository contains the full copyright notices and license terms. -->
         </record>
         <record model="ir.rule" id="rule_action_wizard1">
             <field name="domain"
-                eval="[('groups', 'in', Eval('user', {}).get('groups', []))]"
+                eval="[('groups', 'in', Eval('groups', []))]"
                 pyson="1"/>
             <field name="rule_group" ref="rule_group_action_wizard"/>
         </record>
@@ -539,7 +539,7 @@ this repository contains the full copyright notices and license terms. -->
         </record>
         <record model="ir.rule" id="rule_action_url1">
             <field name="domain"
-                eval="[('groups', 'in', Eval('user', {}).get('groups', []))]"
+                eval="[('groups', 'in', Eval('groups', []))]"
                 pyson="1"/>
             <field name="rule_group" ref="rule_group_action_url"/>
         </record>
@@ -778,7 +778,7 @@ this repository contains the full copyright notices and license terms. -->
         </record>
         <record model="ir.rule" id="rule_sequence">
             <field name="domain"
-                eval="[('groups', 'in', Eval('user', {}).get('groups', []))]"
+                eval="[('groups', 'in', Eval('groups', []))]"
                 pyson="1"/>
             <field name="rule_group" ref="rule_group_sequence"/>
         </record>
@@ -791,7 +791,7 @@ this repository contains the full copyright notices and license terms. -->
         </record>
         <record model="ir.rule" id="rule_sequence_strict">
             <field name="domain"
-                eval="[('groups', 'in', Eval('user', {}).get('groups', []))]"
+                eval="[('groups', 'in', Eval('groups', []))]"
                 pyson="1"/>
             <field name="rule_group" ref="rule_group_sequence_strict"/>
         </record>
@@ -949,7 +949,7 @@ this repository contains the full copyright notices and license terms. -->
             <field name="perm_delete" eval="False"/>
         </record>
         <record model="ir.rule" id="rule_group_export_read1">
-            <field name="domain" eval="[('groups', 'in', Eval('user.groups', []))]" pyson="1"/>
+            <field name="domain" eval="[('groups', 'in', Eval('groups', []))]" pyson="1"/>
             <field name="rule_group" ref="rule_group_export_read"/>
         </record>
         <record model="ir.rule" id="rule_group_export_read2">
@@ -968,7 +968,7 @@ this repository contains the full copyright notices and license terms. -->
             <field name="perm_delete" eval="True"/>
         </record>
         <record model="ir.rule" id="rule_group_export_write1">
-            <field name="domain" eval="[('write_groups', 'in', Eval('user.groups', []))]" pyson="1"/>
+            <field name="domain" eval="[('write_groups', 'in', Eval('groups', []))]" pyson="1"/>
             <field name="rule_group" ref="rule_group_export_write"/>
         </record>
         <record model="ir.rule" id="rule_group_export_write2">
@@ -1006,7 +1006,7 @@ this repository contains the full copyright notices and license terms. -->
             <field name="perm_delete" eval="False"/>
         </record>
         <record model="ir.rule" id="rule_group_export_line_read1">
-            <field name="domain" eval="[('export.groups', 'in', Eval('user.groups', []))]" pyson="1"/>
+            <field name="domain" eval="[('export.groups', 'in', Eval('groups', []))]" pyson="1"/>
             <field name="rule_group" ref="rule_group_export_line_read"/>
         </record>
         <record model="ir.rule" id="rule_group_export_line_read2">
@@ -1025,7 +1025,7 @@ this repository contains the full copyright notices and license terms. -->
             <field name="perm_delete" eval="True"/>
         </record>
         <record model="ir.rule" id="rule_group_export_line_write1">
-            <field name="domain" eval="[('export.write_groups', 'in', Eval('user.groups', []))]" pyson="1"/>
+            <field name="domain" eval="[('export.write_groups', 'in', Eval('groups', []))]" pyson="1"/>
             <field name="rule_group" ref="rule_group_export_line_write"/>
         </record>
         <record model="ir.rule" id="rule_group_export_line_write2">
