@@ -2,5 +2,6 @@
 <!-- This file is part of Tryton.  The COPYRIGHT file at the top level of
 this repository contains the full copyright notices and license terms. -->
 <tree>
-    <field name="name" expand="1"/>
+    <field name="name" expand="2"/>
+    <field name="parent" expand="1"/>
 </tree>
